Fixed the issues with uni tests and also removed the domain classes test suite
Signed-off-by: akkinenivijay <akkineni.vijay@gmail.com>